--- a/index.html
+++ b/index.html
@@ -28,13 +28,16 @@
       background: #f8f8f8;
     }
     #btnLineAdd {
-      padding: 1.5em 3em;
-      font-size: 1.5rem;
+      padding: 3em 6em;
+      font-size: 3rem;
       background: #00c300;
       color: #fff;
       border: none;
-      border-radius: 6px;
+      border-radius: 8px;
       cursor: pointer;
+      box-shadow: 
+    0 8px 16px rgba(0, 0, 0, 0.1),
+    0 2px 4px rgba(0, 0, 0, 0.2);  
     }
   </style>
 </head>
