--- a/index.html
+++ b/index.html
@@ -33,11 +33,17 @@
       background: #00c300;
       color: #fff;
       border: none;
-      border-radius: 8px;
+      border-radius: 12px;
       cursor: pointer;
+      max-width: 90vw;
       box-shadow: 
     0 6px 12px rgba(0, 0, 0, 0.1),
-    0 2px 4px rgba(0, 0, 0, 0.15);  
+    0 2px 4px rgba(0, 0, 0, 0.15);
+    transition: filter 0.1s ease;
+    }
+    /* 押下時のフィードバック */
+    #btnLineAdd:active {
+      filter: brightness(0.85);
     }
   </style>
 </head>
