--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>LINE友だち追加スプラッシュ</title>
+  <title>LINE友だち追加</title>
 
   <!-- Google Tag Manager (headに貼る) -->
   <script>
